License and read me updated

--- a/demoPages/index.html
+++ b/demoPages/index.html
@@ -8,12 +8,17 @@
     <h1>Demo Page!!</h1>
     <p>
       <a href="javascript:(function(d){var s=d.createElement('script');s.src='remoteScript.js';d.body.appendChild(s)})(document)">
-        Add Script
+        Add Script Localhost
       </a>
     </p>
     <p>
       <a href="javascript:(function(d){var s=d.createElement('script');s.src='/js';d.body.appendChild(s)})(document)">
-        Add Script New
+        Add Script Internet
+      </a>
+    </p>
+    <p>
+      <a href="javascript:(function(d){var s=d.createElement('script');s.src='/jss';d.body.appendChild(s)})(document)">
+        Add Script Slient
       </a>
     </p>
   </body>
