--- a/demoPages/index.html
+++ b/demoPages/index.html
@@ -2,24 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Demo Page</title>
+    <title>Xylole Demo Page</title>
+    <style media="screen">
+      div {
+        text-align: center;
+        width: 100%
+      }
+    </style>
   </head>
   <body>
-    <h1>Demo Page!!</h1>
-    <p>
-      <a href="javascript:(function(d){var s=d.createElement('script');s.src='remoteScript.js';d.body.appendChild(s)})(document)">
-        Add Script Localhost
-      </a>
-    </p>
-    <p>
-      <a href="javascript:(function(d){var s=d.createElement('script');s.src='/js';d.body.appendChild(s)})(document)">
-        Add Script Internet
-      </a>
-    </p>
-    <p>
-      <a href="javascript:(function(d){var s=d.createElement('script');s.src='/jss';d.body.appendChild(s)})(document)">
-        Add Script Slient
-      </a>
-    </p>
+    <div class="">
+      <h1>Demo Page!!</h1>
+    </div>
+    <div class="">
+      <p>
+        <a href="javascript:(function(d){var s=d.createElement('script');s.src='remoteScript.js';d.body.appendChild(s)})(document)">
+          Add Script Localhost
+        </a>
+      </p>
+      <p>
+        <a href="javascript:(function(d){var s=d.createElement('script');s.src='/js';d.body.appendChild(s)})(document)">
+          Add Script Internet
+        </a>
+      </p>
+      <p>
+        <a href="javascript:(function(d){var s=d.createElement('script');s.src='/jss';d.body.appendChild(s)})(document)">
+          Add Script Slient
+        </a>
+      </p>
+    </div>
   </body>
 </html>
